# Chicken

./: COPYING  README.md  io.github.dingusreal.Chicken.json  meson.build
.flatpak-builder/cache/refs/heads/x86_64-io.github.dingusreal.Chicken.json/: init
.flatpak-builder/checksums/: x86_64-io.github.dingusreal.Chicken.json
data/: io.github.dingusreal.Chicken.data.gresource.xml  io.github.dingusreal.Chicken.desktop.in  io.github.dingusreal.Chicken.gschema.xml  io.github.dingusreal.Chicken.metainfo.xml.in  meson.build
data/css/: chicken.css
data/icons/: meson.build
po/: POTFILES  meson.build
src/: chicken.js  io.github.dingusreal.Chicken.data.gresource.xml  io.github.dingusreal.Chicken.src.gresource.xml  main.js  meson.build
